Fixed IE bug
Divider was not centered in IE

--- a/src/pages/OurProgramsPage/ProgramViews/LearningDisabilitiesView/LearningDisabilities/LearningDisabilities.scss
+++ b/src/pages/OurProgramsPage/ProgramViews/LearningDisabilitiesView/LearningDisabilities/LearningDisabilities.scss
@@ -22,6 +22,7 @@
 }
 
 .divider {
+  text-align: center;
   img {
     margin-bottom: -160px;
   }
